amyc/src/test/resources/amyc/parser/failing/FunDefError4.grading.amy
object FunDef
  fn foo(i: Int(32)): Int(32) = 42
end FunDef
